crates/cli/tests/snapshots/update__update_tests__internal_managed_resource_continuation_on_a_terminal_resumes_the_flow.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "│\n◇  Managed Resources: updated 2 artifact(s)\n│\n└  Managed Resources reconciled: Gateway runtime skipped\n",
    stderr: "Waiting for the reconciliation slot (elapsed: 0s)\n",
}
