crates/cli/tests/snapshots/update__update_tests__internal_managed_resource_continuation_rejects_update_lock_before_daemon.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: PV self-update/daemon mutation coordination is active; the OS lock is held on <pv-home>/run/update.lock\n",
}
