crates/cli/tests/snapshots/update__update_tests__internal_managed_resource_continuation_skips_app_phase_and_submits_update_job.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "Managed Resources: updated 2 artifact(s)\nManaged Resources reconciled: Gateway runtime skipped\n",
    stderr: "Waiting for the reconciliation slot (elapsed: 0s)\n",
}
