crates/cli/tests/snapshots/update__update_tests__update_accepts_protocol_mismatch_health_after_activation.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "PV update\nPrivileged helper: current 1.0.0 (protocol 1)\nPV application: updated 0.2.5 -> 0.3.0\nDaemon restarted and healthy\n",
    stderr: "",
}
