crates/cli/tests/snapshots/update__update_tests__update_check_json_reports_app_and_managed_resource_updates.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "{\"app\":{\"status\":\"update_available\",\"current_version\":\"0.2.5\",\"latest_version\":\"0.3.0\",\"platform\":\"darwin-arm64\",\"asset\":{\"url\":\"https://downloads.example.test/pv/0.3.0/pv-darwin-arm64\",\"sha256\":\"<sha256>\",\"size\":12345678},\"helper\":{\"status\":\"current\",\"current_version\":\"1.0.0\",\"latest_version\":\"1.0.0\",\"current_protocol_version\":1,\"latest_protocol_version\":1,\"url\":\"https://downloads.example.test/pv/0.3.0/pv-helper-1.0.0-darwin-arm64\",\"sha256\":\"<sha256>\",\"size\":16,\"reason\":null},\"reason\":null},\"managed_resources\":[{\"status\":\"update_available\",\"resource\":\"redis\",\"track\":\"8.8\",\"current_artifact_version\":\"8.8.0-pv1\",\"current_artifact_path\":\"<pv-home>/resources/redis/8.8/releases/8.8.0-pv1\",\"latest_artifact_version\":\"8.8.1-pv1\",\"current_revocation\":null,\"latest_revocation\":null,\"blocked_by\":null,\"reason\":null}]}\n",
    stderr: "",
}
