crates/cli/tests/snapshots/update__update_tests__update_check_on_a_terminal_renders_status_rows.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "[pv] update --check                                                                           v0.2.5\n────────────────────────────────────────────────────────────────────────────────────────────────────\n↑  PV application  update 0.2.5 → 0.3.0 (darwin-arm64)\n✓  Privileged helper  current 1.0.0\n   protocol 1\n\nMANAGED RESOURCES\n↑  redis 8.8  8.8.0-pv1 → 8.8.1-pv1\n\n↑  2 updates available\n   ↳ run  pv update\n",
    stderr: "",
}
