crates/cli/tests/snapshots/update__update_tests__update_check_on_a_terminal_reports_retained_helper_protocol.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "[pv] update --check                                                                           v0.2.4\n────────────────────────────────────────────────────────────────────────────────────────────────────\n✓  PV application  current 0.2.4\n✓  Privileged helper  current 2.0.0\n   protocol 2\n\nMANAGED RESOURCES\n↑  redis 8.8  8.8.0-pv1 → 8.8.1-pv1\n\n↑  1 update available\n   ↳ run  pv update\n",
    stderr: "",
}
