crates/cli/tests/snapshots/update__update_tests__update_check_on_a_terminal_reports_unavailable_app_version.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "[pv] update --check                                                                           v0.2.4\n────────────────────────────────────────────────────────────────────────────────────────────────────\n⚠  PV application  unavailable 0.2.4 (PV app update manifest has no asset for darwin-arm64)\n\nMANAGED RESOURCES\n↑  redis 8.8  8.8.0-pv1 → 8.8.1-pv1\n\n↑  1 update available\n   ↳ run  pv update\n⚠  1 check needs attention\n",
    stderr: "",
}
