crates/cli/tests/snapshots/update__update_tests__update_check_reports_app_manifest_network_failure.snap
---
source: crates/cli/tests/update.rs
assertion_line: 240
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: HTTP request failed for `https://updates.example.test/pv-app-manifest.json`: network error\n",
}
